Add plex and nvidia docu

--- a/jellyfin/service.yaml
+++ b/jellyfin/service.yaml
@@ -1,21 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jellyfin-service
-  labels:
-    app: jellyfin
+  name: jellyfin
+  namespace: jellyfin
 spec:
-  selector:
-    app: jellyfin
+  type: LoadBalancer
+  loadBalancerIP: 10.1.10.7
   ports:
   - name: jellyfin-http
-    protocol: UDP
+    protocol: TCP
     port: 8096
     targetPort: 8096
-    nodePort: 30003
-  - name: jellyfin-https
-    protocol: TCP
-    port: 8920
-    targetPort: 8920
-    nodePort: 30004
-  type: NodePort
+  selector:
+    app: jellyfin
