--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jellyfin
+  namespace: jellyfin
   labels:
     app: jellyfin
 spec:
@@ -27,9 +28,6 @@ spec:
         - containerPort: 8096
           protocol: TCP
           name: jellyfin-http
-        - containerPort: 8920
-          protocol: TCP
-          name: jellyfin-https
         resources:
           requests:
             memory: "128Mi"
@@ -58,7 +56,7 @@ spec:
       volumes:
       - name: jellyfin-config
         persistentVolumeClaim:
-          claimName: jellyfin-config-pvc
+          claimName: jellyfin-config
       - name: jellyfin-cache
         emptyDir:
           sizeLimit: 2Gi
