--- a/jellyfin/pvc.yaml
+++ b/jellyfin/pvc.yaml
@@ -1,7 +1,8 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: jellyfin-config-pvc
+  name: jellyfin-config
+  namespace: jellyfin
 spec:
   storageClassName: kadalu.ext-config
   accessModes:
