--- a/jellyfin/deployment.yaml
+++ b/jellyfin/deployment.yaml
@@ -33,8 +33,8 @@ spec:
             memory: "128Mi"
             cpu: "200m"
           limits:
-            memory: "2Gi"
-            cpu: "2000m"
+            memory: "8Gi"
+            cpu: "8000m"
             nvidia.com/gpu: 1
         volumeMounts:
         - name: jellyfin-config
@@ -46,10 +46,10 @@ spec:
       tolerations:
       - key: node.kubernetes.io/not-ready
         effect: NoExecute
-        tolerationSeconds: 0
+        tolerationSeconds: 30
       - key: node.kubernetes.io/unreachable
         effect: NoExecute
-        tolerationSeconds: 0
+        tolerationSeconds: 30
       - key: nvidia.com/gpu
         operator: Exists
         effect: NoSchedule
@@ -59,9 +59,9 @@ spec:
           claimName: jellyfin-config
       - name: jellyfin-cache
         emptyDir:
-          sizeLimit: 2Gi
+          sizeLimit: 12Gi
       - name: jellyfin-data
         nfs:
-          server: 10.1.10.100
-          path: /mnt/Andromeda/plex-data
+          server: 10.1.10.101
+          path: /Sagittarius/plex
           readOnly: true
