--- a/blocky/service.yaml
+++ b/blocky/service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: blocky-service-tcp
+  namespace: blocky
   annotations:
     metallb.universe.tf/allow-shared-ip: "F5XFhlQjAHk49Ncsl3zwDwlZjC46pD05"
 spec:
   type: LoadBalancer
-  loadBalancerIP: 10.1.10.2
+  loadBalancerIP: 10.1.10.3
   ports:
     - name: blocky-dns-tcp
       protocol: TCP
@@ -19,11 +20,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: blocky-service-udp
+  namespace: blocky
   annotations:
     metallb.universe.tf/allow-shared-ip: "F5XFhlQjAHk49Ncsl3zwDwlZjC46pD05"
 spec:
   type: LoadBalancer
-  loadBalancerIP: 10.1.10.2
+  loadBalancerIP: 10.1.10.3
   ports:
     - name: blocky-dns-udp
       protocol: UDP
