--- a/home-assistant/pvc.yaml
+++ b/home-assistant/pvc.yaml
@@ -1,12 +1,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: blocky-pvc
-  namespace: blocky
+  name: home-assistant-config
+  namespace: home-assistant
 spec:
   storageClassName: kadalu.external
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 64Gi
