--- a/zigbee2mqtt/pvc.yaml
+++ b/zigbee2mqtt/pvc.yaml
@@ -1,12 +1,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: blocky-pvc
-  namespace: blocky
+  name: zigbee2mqtt-data
+  namespace: zigbee2mqtt
 spec:
   storageClassName: kadalu.external
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 16Gi
